WANPIPE TDM VOICE - IP/WAN Package

------------------------------------------------------------------------------
Author: Nenad Corbic <ncorbic@sangoma.com>
Copyright (c) 1995-2015 Sangoma Technologies Inc.

For more info visit: http://wiki.sangoma.com
------------------------------------------------------------------------------

* Mon Feb 03 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.16
==================================================================
- FreePBX fwconsole support in wancfg_zaptel.pl
- Reduced the clock sync error polling: can cause massive printing in bad
clock conditions
- Support for DAHDI 2.11


* Mon Nov 21 2015 Nenad Corbic <ncorbic@sangoma.com> -  7.0.15
==================================================================


- Support for 4.3 kernels
- Updated T1/E1 Alarm debouncing
  Fixes RAI alarm issues detected on some Indian E1 lines.
- Added a global limit to max printed error messages per sec.
  Protects the Server from over logging
- Updated wanec stats
- wanrouter script fix for 4.0 kernels
- Added new IRQ mode
  GLOBAL_POLL_IRQ=YES


* Mon Apr 20 2015 Nenad Corbic <ncorbic@sangoma.com> -  7.0.14
==================================================================

- Updated PCIe PLX configuration
  Fixes the PCIe retry errors on some newer servers
- Bug fix for B601 card
  Clock set incorrecty causing the card not to start.
- Wanpipe DADHI config
  Added extra /etc/wanpipe/global.conf options

* Sat Sep 27 2014 Nenad Corbic <ncorbic@sangoma.com> -  7.0.12
==================================================================

- New A104/2/1 Fimrware: A104 v45 A102/1 v40
  Provides FE sync feature, that recovers DMA in case of loss of sync.
  This feature is already enabled on A108/16
- Wanpipe config structures are now 32bit 64bit binary compatible.
- Proper India DTMF caller ID support via FAKE POLARITY feature.
- Support for Debian kernels
- Support for Debian and Ubuntu kernels

- Updated Reference clock logic.