@@ -1,5 +1,5 @@
 Package: wanpipe
-Version: 7.0.16-0
+Version: 7.0.17-0
 Section: networking
 Priority: optional
 Architecture: all
