@@ -2231,7 +2231,7 @@ init_global_params()
 {
 
 	if [ $OSYSTEM = "Linux" ]; then
-		ROUTER_VERSION=7.0.16
+		ROUTER_VERSION=7.0.17
 		IFCONFIG_LIST=ifconfig
 		MODULE_STAT=lsmod
 		WAN_DRIVERS="wanpipe"
@@ -2595,10 +2595,22 @@ case "$1" in
 					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION --fe_te_sig=$WANPIPE_GLOBAL_FE_TE_SIG"
 				fi
 				if [ "$WANPIPE_GLOBAL_FE_LCODE" != "" ]; then
-					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION ----fe_lcode=$WANPIPE_GLOBAL_FE_LCODE"
+					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION --fe_lcode=$WANPIPE_GLOBAL_FE_LCODE"
 				fi
 				if [ "$WANPIPE_GLOBAL_FE_FRAME" != "" ]; then
-					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION ----fe_frame=$WANPIPE_GLOBAL_FE_FRAME"
+					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION --fe_frame=$WANPIPE_GLOBAL_FE_FRAME"
+				fi
+				if [ "$WANPIPE_GLOBAL_FAKE_POLARITY" != "" ]; then
+					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION --fake_polarity=$WANPIPE_GLOBAL_FAKE_POLARITY"
+				fi
+				if [ "$WANPIPE_GLOBAL_FAKE_POLARITY_THRESHOLD" != "" ]; then
+					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION --fake_polarity_thres=$WANPIPE_GLOBAL_FAKE_POLARITY_THRESHOLD"
+				fi
+				if [ "$WANPIPE_GLOBAL_FAKE_POLARITY_CIDTIMER" != "" ]; then
+					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION --fake_polarity_cidtimer=$WANPIPE_GLOBAL_FAKE_POLARITY_CIDTIMER"
+				fi
+				if [ "$WANPIPE_GLOBAL_FAKE_POLARITY_CIDTIMEOUT" != "" ]; then
+					WANCFG_EXTRA_OPTION="$WANCFG_EXTRA_OPTION --fake_polarity_cidtimeout=$WANPIPE_GLOBAL_FAKE_POLARITY_CIDTIMEOUT"
 				fi
 
 				eval "wancfg_dahdi --no-dahdi --no-chan-dahdi --silent --fe_media=$WANPIPE_GLOBAL_FE_MEDIA $WANCFG_EXTRA_OPTION"
