@@ -8,6 +8,18 @@ Copyright (c) 1995-2015 Sangoma Technologies Inc.
 For more info visit: http://wiki.sangoma.com
 ------------------------------------------------------------------------------
 
+* Fri Mar 17 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.17
+==================================================================
+- Driver will start by default even though analog FXS/FXO module failed to configure.
+  New config parameters: RM_FAIL_ON_MOD_ERROR=YES will revert this behaviour.
+- Fake polarity feature is now configurable
+  New config parameters with their default values if not set
+  RM_FAKE_POLARITY=NO  #Default is NO.
+  RM_FAKE_POLARITY_THRESHOLD=1600
+  RM_FAKE_POLARITY_CIDTIMER=400
+  RM_FAKE_POLARITY_CIDTIMEOUT=4000
+
+
 * Mon Feb 03 2016 Nenad Corbic <ncorbic@sangoma.com> -  7.0.16
 ==================================================================
 - FreePBX fwconsole support in wancfg_zaptel.pl
